<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_narasumber"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_below="@+id/img_item_photo"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bm_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/img_item_photo"
            android:layout_toEndOf="@+id/img_narasumber"
            />

        <TextView
            android:id="@+id/tv_item_narasumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:paddingBottom="16dp"
            android:text="@string/bm_narasumber"
            android:layout_below="@+id/tv_item_name"
            android:layout_toEndOf="@+id/img_narasumber"/>



        <Button
            android:id="@+id/btn_link"
            android:layout_width="150dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/tv_item_narasumber"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/button_tint_books"
            android:text="@string/pesan_buku"
            android:textColor="@color/button_text_books"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="150dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/tv_item_narasumber"
            android:layout_marginEnd="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button_tint_books"
            android:text="@string/lihat_detail"
            android:textColor="@color/button_text_books"
            android:textStyle="bold"
            />



    </RelativeLayout>

</androidx.cardview.widget.CardView>